# X-Panel

./: .env.example  .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md  notify.py
src/: lib.rs  main.rs  module_trait.rs  panel.rs  registry.rs
src/modules/: clock.rs  deepseek_balance.rs  mod.rs  network_monitor.rs  system_info.rs  system_temp.rs
