[package]
name = "x-panel"
version = "0.1.0"
edition = "2021"
description = "X-Panel 模块化终端面板框架"
authors = ["xein"]

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }

# HTTP 客户端
reqwest = { version = "0.11", features = ["json"] }

# JSON 序列化/反序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 错误处理
anyhow = "1"

# 日志
log = "0.4"
env_logger = "0.10"

# 配置管理
dotenvy = "0.15"

# 终端 UI
ratatui = "0.24"
crossterm = "0.27"

# 时间处理
chrono = "0.4"

# 模块管理
async-trait = "0.1"
